Add some functions.
